--- a/app/front/scripts/directives/templates/visualizations.html
+++ b/app/front/scripts/directives/templates/visualizations.html
@@ -177,7 +177,7 @@
           <a ng-repeat="item in availableVisualizations"
             class="x-visualization-item"
             ng-class="{disabled: !item.isEnabled, selected: selectedVisualizations.indexOf(item.id) >= 0}"
-            ng-click="item.isEnabled ? addVisualization(item.id) : null" href="javascript:void(0);">
+            ng-click="item.isEnabled ? addVisualization(item.id, true) : null" href="javascript:void(0);">
             <i ng-class="item.icon"></i>
             {{ item.name }}
           </a>
