--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -400,6 +400,21 @@ html {
   }
 }
 
+.x-package-info {
+  margin: 1em 0;
+  padding: 0;
+  border-top: 1px solid #e7e7e7;
+
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
+
+  .os-icon {
+    margin-right: 0.2em;
+  }
+}
+
 .geoview-container {
   display: block;
   position: relative;
