--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -39,7 +39,7 @@
         <visualizations state="state" events="events" type="state.selectedChartType"></visualizations>
       </div>
 
-      <package-info package-url="datapackage.json" resource-url="resource.csv"></package-info>
+      <package-info datapackage="dataPackageInfo"></package-info>
     </div>
   </div>
   <div class="waiter text-center" ng-if="(state.isPackageLoading || state.isStarting)">
