--- a/app/front/scripts/directives/templates/sidebar.html
+++ b/app/front/scripts/directives/templates/sidebar.html
@@ -59,7 +59,7 @@
       <sidebar-list items="hierarchy.dimensions" selected="state.dimensions.current.groups"
         title="{{ (hierarchy.common) ? 'Dimension' : hierarchy.name }}"></sidebar-list>
     </div>
-    <div ng-repeat="hierarchy in datetimeHierarchies" ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
+    <div ng-repeat="hierarchy in state.hierarchies" ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
       <hr>
       <strong>{{ (hierarchy.common) ? "Dimension" : hierarchy.name }}</strong>
       <dimensions-filter hierarchy="hierarchy" dimensions="state.dimensions"
@@ -76,7 +76,7 @@
       <sidebar-list items="hierarchy.dimensions" selected="state.dimensions.current.groups"
         title="{{ (hierarchy.common) ? 'Location' : hierarchy.name }}"></sidebar-list>
     </div>
-    <div ng-repeat="hierarchy in locationHierarchies" ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
+    <div ng-repeat="hierarchy in state.hierarchies" ng-if="selectedHierarchies.indexOf(hierarchy.key) == -1">
       <hr>
       <dimensions-filter hierarchy="hierarchy" dimensions="state.dimensions"
         events="events"></dimensions-filter>
