--- a/app/front/scripts/directives/templates/visualizations.html
+++ b/app/front/scripts/directives/templates/visualizations.html
@@ -1,7 +1,6 @@
 <div ng-repeat="visualization in selectedVisualizations" class="well x-visualization-container">
   <div ng-if="visualization == 'Treemap'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
-
       <tree-map ng-if="!state.flag.renderingCharts"
         cube="{{state.availablePackages.current}}"
         state="state.babbage"
@@ -14,7 +13,7 @@
     </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -25,7 +24,6 @@
   </div>
   <div ng-if="visualization == 'PieChart'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
-
       <pie-chart ng-if="!state.flag.renderingCharts"
         cube="{{state.availablePackages.current}}"
         state="state.babbage"
@@ -38,7 +36,7 @@
     </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -62,7 +60,7 @@
     </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -73,7 +71,6 @@
   </div>
   <div ng-if="visualization == 'LineChart'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
-
       <chart ng-if="!state.flag.renderingCharts"
         type="line"
         cube="{{state.availablePackages.current}}"
@@ -87,7 +84,7 @@
     </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -96,7 +93,6 @@
       </div>
     </div>
   </div>
-
   <div ng-if="visualization == 'Table'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <babbage-table ng-if="!state.flag.renderingCharts"
@@ -112,7 +108,7 @@
     </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -121,7 +117,6 @@
       </div>
     </div>
   </div>
-
   <div ng-if="visualization == 'BubbleTree'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <bubbletree ng-if="!state.flag.renderingCharts"
@@ -137,7 +132,7 @@
     </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -166,7 +161,7 @@
       </div>
     <div class="x-visualization-buttons">
       <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" class="os-icon os-icon-embed"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
       <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
         <div class="visualization-popover">
           <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
@@ -176,6 +171,7 @@
     </div>
   </div>
 </div>
+
 <div ng-click="showAddVisualizationDialog()" title="Add visualization" class="well x-visualization-add text-center">
   <i class="os-icon os-icon-circle-plus"></i>
 </div>
@@ -205,6 +201,31 @@
             range of visualization types.
           </p>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade x-visualization-share-modal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Share visualization</h4>
+      </div>
+      <div class="modal-body">
+        <form onsubmit="return false;">
+          <div class="form-group">
+            <label for="shareUrl">Link</label>
+            <input type="text" class="form-control" id="shareUrl" value="{{ shareUrl }}" readonly="readonly">
+          </div>
+          <div class="form-group">
+            <label for="shareEmbed">Embed</label>
+            <textarea type="text" class="form-control" id="shareEmbed" readonly="readonly">{{
+              '<iframe src="' + shareUrl + '" width="960" height="450" border="0" frameborder="0" seamless="on" style="border: 0px; margin: 0px; padding: 0px;"></iframe>'
+            }}</textarea>
+          </div>
+        </form>
       </div>
     </div>
   </div>
