--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -3,6 +3,10 @@ html {
   height: 100%;
 }
 
+textarea {
+  resize: vertical;
+}
+
 .navbar.x-page-header {
   .navbar-brand {
     width: 23%;
@@ -286,9 +290,12 @@ html {
   }
 }
 
-.x-visualization-add-modal {
-  left: 23%;
+.x-visualization-add-modal,
+.x-visualization-share-modal {
+  padding-left: 23%;
+}
 
+.x-visualization-add-modal {
   p {
     margin: 0;
     margin-top: 1em;
