--- a/app/front/scripts/directives/templates/sidebar-list.html
+++ b/app/front/scripts/directives/templates/sidebar-list.html
@@ -10,8 +10,9 @@
     <a ng-repeat="item in items track by $index" href="javascript:void(0);"
       ng-class="{active: isSelected(item.key)}"
       ng-click="selectItem($event, item)"
-      class="list-group-item">{{ item.name || item.value }}
+      class="list-group-item">
       <i ng-if="canClear && isSelected(item.key)" ng-click="unselectItem($event, item)" class="os-icon os-icon-remove pull-right"></i>
+      {{ item.name || item.value }}
     </a>
   </div>
 </div>
