--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png"/>
   <link rel="stylesheet" href="styles/vendor.css?{{ sessionSalt }}">
   <link rel="stylesheet" href="styles/app.css?{{ sessionSalt }}">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body ng-app="Application" ng-controller="main" class="ng-cloak">
 <div id="root"></div>
