#911 Fixed list types and titles

--- a/app/front/scripts/directives/templates/measures.html
+++ b/app/front/scripts/directives/templates/measures.html
@@ -1,3 +1,4 @@
 <div>
-  <sidebar-list items="measures.items" selected="[measures.current]" title="Measures"></sidebar-list>
+  <sidebar-list items="measures.items" selected="[measures.current]"
+    plain-list="yes" title="Measures"></sidebar-list>
 </div>
