--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -65,6 +65,12 @@ textarea {
   }
 }
 
+.x-hide-first-separator:first-child {
+  hr {
+    display: none;
+  }
+}
+
 .x-page-container {
   display: table;
   table-layout: fixed;
