--- a/app/front/scripts/directives/templates/sidebar-list.html
+++ b/app/front/scripts/directives/templates/sidebar-list.html
@@ -10,12 +10,27 @@
     <strong>{{ title }}</strong>
   </div>
   <div ng-if="plainList || !list.isCollapsed" class="list-group list-group-inverse slide-animation">
-    <a ng-repeat="item in items track by $index" href="javascript:void(0);"
+    <a ng-repeat="item in getSelectedItems() track by [$index, item.key]" href="javascript:void(0);"
+      class="list-group-item active">
+      <i ng-if="canClear && isSelected(item.key)" ng-click="unselectItem($event, item)" class="os-icon os-icon-remove pull-right"></i>
+      {{ item.displayName }}
+    </a>
+    <div class="list-group-item" ng-if="items.length > maxItems">
+      <div ng-class="{'input-group': !!filter.displayName}">
+        <input type="text" class="form-control" placeholder="Search for item..." ng-model="filter.displayName">
+        <span class="input-group-btn" ng-if="!!filter.displayName">
+          <button class="btn btn-default" type="button" ng-click="filter.displayName = ''"><i class="fa fa-times"></i></button>
+        </span>
+      </div>
+    </div>
+    <a ng-repeat="item in itemsToDisplay track by [$index, item.key]" href="javascript:void(0);"
       ng-class="{active: isSelected(item.key)}"
       ng-click="selectItem($event, item)"
       class="list-group-item">
       <i ng-if="canClear && isSelected(item.key)" ng-click="unselectItem($event, item)" class="os-icon os-icon-remove pull-right"></i>
-      {{ item.name || item.value }}
+      {{ item.displayName }}
     </a>
+    <strong ng-if="!!filter.displayName && !itemsToDisplay.length">No results found</strong>
+    <strong ng-if="hasMoreItems">... there are more items</strong>
   </div>
 </div>
