--- a/app/front/scripts/directives/templates/visualizations.html
+++ b/app/front/scripts/directives/templates/visualizations.html
@@ -242,11 +242,11 @@
         <form onsubmit="return false;">
           <div class="form-group">
             <label for="shareUrl">Link</label>
-            <input type="text" class="form-control" id="shareUrl" value="{{ shareUrl }}" readonly="readonly">
+            <input type="text" class="form-control form-control-inverse" id="shareUrl" value="{{ shareUrl }}" readonly="readonly">
           </div>
           <div class="form-group">
             <label for="shareEmbed">Embed</label>
-            <textarea type="text" class="form-control" id="shareEmbed" readonly="readonly">{{
+            <textarea type="text" class="form-control form-control-inverse" id="shareEmbed" readonly="readonly">{{
               '<iframe src="' + shareUrl + '" width="960" height="450" border="0" frameborder="0" seamless="on" style="border: 0px; margin: 0px; padding: 0px;"></iframe>'
             }}</textarea>
           </div>
