openspending/openspending#932 Fix URL in Embed popup

--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <base href="/{{basePath}}"/>
+  <base href="{{basePath}}/">
   <meta http-equiv="x-ua-compatible" content="ie=edge"/>
   <meta name="description" content="A frontend data/views app powered directly from a Fiscal Data Package."/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
