--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -28,7 +28,7 @@
         </div>
       </li>
     </ul>
-    <a class="navbar-brand navbar-brand-primary navbar-brand-black" href="#" title="OS Viewer"><img src="assets/os.svg" class="os-logo-part"><img src="assets/viewer.svg" class="os-logo-part"></a>
+    <a class="navbar-brand navbar-brand-primary navbar-brand-black" href="{% endraw %}{{ basePath }}/{% raw %}" target="_self" title="OS Viewer"><img src="assets/os.svg" class="os-logo-part"><img src="assets/viewer.svg" class="os-logo-part"></a>
   </div>
 </nav>
 {% endraw %}
