openspending/openspending#917 Sorting by dimension

--- a/app/front/scripts/directives/templates/available-packages.html
+++ b/app/front/scripts/directives/templates/available-packages.html
@@ -1,5 +1,5 @@
 <div class="row x-available-packages">
-  <div class="col-xs-12" ng-class="{open: dropdownState.isOpen}">
+  <div class="col-xs-12 dropdown" ng-class="{open: dropdownState.isOpen}">
     <h3 ng-click="dropdownState.isOpen = !dropdownState.isOpen">
       <i class="os-icon os-icon-box"></i>
       {{ selected.title || selected.current }}
