--- a/app/front/scripts/directives/templates/visualizations.html
+++ b/app/front/scripts/directives/templates/visualizations.html
@@ -1,5 +1,12 @@
-<div ng-repeat="visualization in selectedVisualizations" class="well x-visualization-container">
-  <div ng-if="visualization == 'Treemap'" class="row">
+<div ng-repeat="visualizationId in selectedVisualizations" class="well x-visualization-container"
+  ng-init="visualization = getVisualizationById(visualizationId)">
+  <div class="clearfix" ng-if="visualization.type == 'sortable-series'">
+    <sorting-control
+      selected="state.orderBy" events="events"
+      items="[getItemByKey(state.measures.items, state.measures.current), getItemByKey(state.dimensions.items, state.dimensions.current.groups)]">
+    </sorting-control>
+  </div>
+  <div ng-if="visualizationId == 'Treemap'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <tree-map ng-if="!state.flag.renderingCharts"
         cube="{{state.availablePackages.current}}"
@@ -7,22 +14,22 @@
         endpoint="{{state.apiUrl}}">
       </tree-map>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'PieChart'" class="row">
+  <div ng-if="visualizationId == 'PieChart'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <pie-chart ng-if="!state.flag.renderingCharts"
         cube="{{state.availablePackages.current}}"
@@ -30,22 +37,22 @@
         endpoint="{{state.apiUrl}}">
       </pie-chart>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'BarChart'" class="row">
+  <div ng-if="visualizationId == 'BarChart'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <chart ng-if="!state.flag.renderingCharts"
         type="bar"
@@ -54,22 +61,22 @@
         endpoint="{{state.apiUrl}}">
       </chart>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'LineChart'" class="row">
+  <div ng-if="visualizationId == 'LineChart'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <chart ng-if="!state.flag.renderingCharts"
         type="line"
@@ -78,22 +85,22 @@
         endpoint="{{state.apiUrl}}">
       </chart>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'Table'" class="row">
+  <div ng-if="visualizationId == 'Table'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <babbage-table ng-if="!state.flag.renderingCharts"
         type="line"
@@ -102,22 +109,22 @@
         endpoint="{{state.apiUrl}}">
       </babbage-table>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'BubbleTree'" class="row">
+  <div ng-if="visualizationId == 'BubbleTree'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <bubbletree ng-if="!state.flag.renderingCharts"
         type="line"
@@ -126,22 +133,22 @@
         endpoint="{{state.apiUrl}}">
       </bubbletree>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'Map'" class="row">
+  <div ng-if="visualizationId == 'Map'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9" ng-if="state.availablePackages.locationAvailable && state.availablePackages.locationSelected">
       <geo-view ng-if="!state.flag.renderingCharts"
         cube="{{state.availablePackages.current}}"
@@ -155,22 +162,22 @@
     <div class="alert alert-warning col-xs-12 col-sm-9" ng-if="!(state.availablePackages.locationAvailable && state.availablePackages.locationSelected)">
       Please, group your data by <code>location</code> dimension to enable this visualization.
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs" ng-if="state.availablePackages.locationAvailable && state.availablePackages.locationSelected">
-        <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs" ng-if="state.availablePackages.locationAvailable && state.availablePackages.locationSelected">
+        <h3>{{ visualization.name }}</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
     </div>
   </div>
-  <div ng-if="visualization == 'PivotTable'" class="row">
+  <div ng-if="visualizationId == 'PivotTable'" class="row">
     <div class="x-visualization-chart col-xs-12 col-sm-9">
       <div class="table-responsive">
         <pivot-table ng-if="!state.flag.renderingCharts"
@@ -180,16 +187,16 @@
         </pivot-table>
       </div>
     </div>
-    <div ng-init="info = getVisualizationById(visualization)" class="x-visualization-info col-sm-3 hidden-xs">
-      <h3>{{ info.name }}</h3>
+    <div class="x-visualization-info col-sm-3 hidden-xs">
+      <h3>{{ visualization.name }}</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="x-visualization-buttons">
-      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualization }}" class="os-icon os-icon-trashcan"></a>
-      <a href="javascript:void(0);" ng-click="showShareModal(visualization)" class="os-icon os-icon-embed"></a>
-      <div id="{{ 'visualization-popover-' + visualization }}" class="hidden">
+      <a href="javascript:void(0);" popover="{{ '#visualization-popover-' + visualizationId }}" class="os-icon os-icon-trashcan"></a>
+      <a href="javascript:void(0);" ng-click="showShareModal(visualizationId)" class="os-icon os-icon-embed"></a>
+      <div id="{{ 'visualization-popover-' + visualizationId }}" class="hidden">
         <div class="visualization-popover">
-          <button ng-click="removeVisualization(visualization)" type="button" class="btn btn-danger">Remove this visualization</button>
+          <button ng-click="removeVisualization(visualizationId)" type="button" class="btn btn-danger">Remove this visualization</button>
           <button ng-click="removeAllVisualizations()" type="button" class="btn btn-danger">Remove all visualizations</button>
         </div>
       </div>
