--- a/app/front/scripts/directives/templates/dimensions-filter.html
+++ b/app/front/scripts/directives/templates/dimensions-filter.html
@@ -1,6 +1,6 @@
 <div>
   <div ng-repeat="filter in hierarchy.dimensions">
-    <sidebar-list items="getFilterItems(filter)" selected="[dimensions.current.filters[filter.code]]"
-      title="{{ filter.name }}" can-clear="yes" max-items="10"></sidebar-list>
+    <sidebar-list items="getFilterItems(filter)" selected="[dimensions.current.filters[filter.key]]"
+      title="{{ filter.code }}" can-clear="yes" max-items="10"></sidebar-list>
   </div>
 </div>
