Minor link modification

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-inverse x-page-header" ng-controller="HeaderController">
   <div class="navbar-header navbar-header-full-width">
     <ul class="nav navbar-nav pull-right">
-      <li><a href="http://fiscal.dataprotocols.org/spec/">Fiscal Data Package Spec</a></li>
-      <li><a href="http://community.openspending.org/next/">OpenSpending Next</a></li>
+      <li><a href="/packager/">Upload Data</a></li>
+      <li><a href="/about/">About</a></li>
 
       <li ng-if="!login.isLoggedIn" class="user">
         <a href="javascript:void(0)" ng-click="login.login()">
